--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,4 @@ include_directories(include)
 include_directories(include/file_io)
 include_directories(include/core)
 
-add_executable(code main.cpp src/command.cpp src/manager.cpp src/models.cpp)
+add_executable(code main.cpp src/command.cpp src/manager.cpp src/models.cpp src/journal.cpp)
